--- a/src/fxml/CheckoutIndex.fxml
+++ b/src/fxml/CheckoutIndex.fxml
@@ -16,7 +16,7 @@
             <TableColumn fx:id="itemPrice" minWidth="152.0" prefWidth="152.0" text="Price" />
         </columns>
       </TableView>
-      <Label fx:id="message" layoutX="63.0" layoutY="308.0" prefWidth="810.0" text="Important: If you are not login, please click on My Account to login. If you do not have an Account, click on the Sign Up button and create an Account" />
+      <Label fx:id="message" layoutX="28.0" layoutY="306.0" prefWidth="871.0" text="Important" />
       <TextField fx:id="firstName" layoutX="63.0" layoutY="376.0" promptText="Enter first name" />
       <TextField fx:id="lastName" layoutX="306.0" layoutY="376.0" promptText="Enter last name" />
       <TextField fx:id="address" layoutX="63.0" layoutY="431.0" prefHeight="27.0" prefWidth="370.0" promptText="Street address" />
@@ -26,15 +26,15 @@
       <TextField fx:id="rUserName" layoutX="62.0" layoutY="636.0" promptText="Enter username" />
       <TextField fx:id="userName" layoutX="373.0" layoutY="390.0" promptText="Enter username" />
       <PasswordField fx:id="password" layoutX="373.0" layoutY="443.0" promptText="Enter password" />
-      <Button fx:id="login" layoutX="536.0" layoutY="525.0" mnemonicParsing="false" text="Login" />
-      <Button fx:id="submit" layoutX="427.0" layoutY="692.0" mnemonicParsing="false" text="Submit" />
-      <Button fx:id="clearAll" layoutX="286.0" layoutY="692.0" mnemonicParsing="false" text="Clear All" />
+      <Button fx:id="login" layoutX="564.0" layoutY="524.0" mnemonicParsing="false" text="Login" />
+      <Button fx:id="submit" layoutX="414.0" layoutY="691.0" mnemonicParsing="false" text="Submit" />
+      <Button fx:id="clearAll" layoutX="294.0" layoutY="691.0" mnemonicParsing="false" text="Clear All" />
       <Label fx:id="incorrectLogin" layoutX="343.0" layoutY="495.0" text="Incorrect username or passworld" />
       <TextField fx:id="rPassword" layoutX="294.0" layoutY="636.0" promptText="Enter password" />
       <Label fx:id="createMessage" layoutX="63.0" layoutY="597.0" text="Create A Login UserName and Password" />
       <Button fx:id="signUp" layoutX="650.0" layoutY="333.0" mnemonicParsing="false" onAction="#enableSignUpField" text="Sign Up" />
       <Button fx:id="myAccount" layoutX="745.0" layoutY="333.0" mnemonicParsing="false" onAction="#enableLoginField" text="My Account" />
-      <Button fx:id="forgetPassword" layoutX="335.0" layoutY="525.0" mnemonicParsing="false" text="Forget Password" />
+      <Button fx:id="forgetPassword" layoutX="403.0" layoutY="524.0" mnemonicParsing="false" text="Forget Password" />
       <ImageView fx:id="imageViewU" fitHeight="25.0" fitWidth="30.0" layoutX="343.0" layoutY="392.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../image/icon/user.png" />
@@ -47,5 +47,6 @@
       </ImageView>
       <Button fx:id="viewCartItem" layoutX="488.0" layoutY="333.0" mnemonicParsing="false" text="View Cart Items" />
       <Label fx:id="viewMessage" layoutX="290.0" layoutY="149.0" text="Click View Cart Items to view all item in carts" />
+      <Button fx:id="guessUser" layoutX="740.0" layoutY="365.0" mnemonicParsing="false" text="Guess User" />
    </children>
 </AnchorPane>
