--- a/src/style/Message.css
+++ b/src/style/Message.css
@@ -2,17 +2,22 @@
 * {
     -fx-primary: #4F545b;
     -fx-primarytext: #FFF;
+    -fx-primarybc: #2A2E37;
+    -fx-secondary: #FFFF8D;
 }
 
 .notification-bar {
     -fx-padding: 5px 10px 5px 10px;
     -fx-pref-width: 200px;
 }
+
 .notification-bar>.pane {
     -fx-padding: 5px 10px 5px 10px;
     -fx-background-insets: 0;
     -fx-pref-width: 150px;
     -fx-pref-height: 70px;
+    -fx-background-color: -fx-primarybc;
+    -fx-border-color: -fx-secondary;
 }
 
 .notification-bar>.pane .title {
@@ -22,18 +27,21 @@
 }
 
 .notification-bar>.pane .label {
+    -fx-text-fill: -fx-secondary;
     -fx-font-size: 16px;
     -fx-font-family: "Times New Roman";
     -fx-alignment: center;
 }
 
 .dialog-pane {
-    -fx-background-color: -fx-primary;
+    -fx-background-color: -fx-primarybc;
     -fx-text-fill: -fx-primarytext;
+    -fx-border-color: -fx-secondary;
 }
 
 .dialog-pane .label.content {
     -fx-text-fill: -fx-primarytext;
     -fx-font-family: "Times New Roman";
     -fx-font-size: 16px;
+    -fx-alignment: center;
 }
