--- a/src/fxml/CheckoutIndex.fxml
+++ b/src/fxml/CheckoutIndex.fxml
@@ -46,5 +46,6 @@
          </image>
       </ImageView>
       <Button fx:id="submitOrder" layoutX="747.0" layoutY="334.0" mnemonicParsing="false" text="Guess User" />
+      <Label fx:id="loginStatic" layoutX="351.0" layoutY="339.0" text="Label" visible="false" />
    </children>
 </AnchorPane>
