--- a/src/fxml/MainIndex.fxml
+++ b/src/fxml/MainIndex.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="751.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Main">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="751.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Main">
    <children>
       <GridPane layoutX="-10.0" prefHeight="52.0" prefWidth="1231.0">
         <columnConstraints>
@@ -21,7 +21,7 @@
          <children>
             <Pane fx:id="topPane" prefHeight="41.0" prefWidth="1231.0">
                <children>
-                  <Button fx:id="log" layoutX="1060.0" layoutY="7.0" mnemonicParsing="false" onAction="#logInAndLogOut" prefHeight="39.0" prefWidth="89.0" text="Sign In" />
+                  <Button fx:id="log" layoutX="1060.0" layoutY="7.0" mnemonicParsing="false" onAction="#logInAndLogOut" prefHeight="39.0" text="Sign In" />
                </children>
                <padding>
                   <Insets bottom="10.0" top="10.0" />
