--- a/src/fxml/EmployeeIndex.fxml
+++ b/src/fxml/EmployeeIndex.fxml
@@ -1,26 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
 <AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="687.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Employee">
    <children>
-      <GridPane alignment="TOP_CENTER" layoutX="-18.0" layoutY="655.0" prefHeight="45.0" prefWidth="1137.0">
+      <GridPane fx:id="gridPaneFooter" alignment="TOP_CENTER" layoutX="-18.0" layoutY="640.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="53.0" prefWidth="1137.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="1000.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="1000.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Pane fx:id="footer" prefHeight="45.0" prefWidth="1137.0">
-               <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="379.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" style="-fx-text-fill: #FFF; -fx-font-size: 16px;" text="Copyright © 2018. All right reserved. Powered by M.Keita Platform" />
-               </children>
-            </Pane>
+            <Label fx:id="footer" alignment="CENTER_RIGHT" style="-fx-text-fill: #FFF; -fx-font-size: 16px;" text="Copyright © 2018. All right reserved. Powered by M.Keita Platform" GridPane.halignment="CENTER" />
          </children>
       </GridPane>
       <Pane fx:id="leftPane" layoutX="5.0" layoutY="68.0" prefHeight="552.0" prefWidth="408.0" style="-fx-border-width: 0 2 2 0; -fx-border-color: red;">
@@ -34,6 +27,17 @@
                   <TableColumn prefWidth="105.0" text="Cust Num" />
               </columns>
             </TableView>
+            <GridPane alignment="CENTER" layoutX="77.0" layoutY="68.0" prefHeight="30.0" prefWidth="255.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Label" />
+               </children>
+            </GridPane>
          </children>
       </Pane>
       <TableView fx:id="productTable" layoutX="453.0" layoutY="109.0" prefHeight="488.0" prefWidth="615.0">
