--- a/src/fxml/MainIndex.fxml
+++ b/src/fxml/MainIndex.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="751.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Main">
    <children>
-      <GridPane layoutX="-10.0" prefHeight="52.0" prefWidth="1231.0">
+      <GridPane layoutX="-10.0" prefHeight="40.0" prefWidth="1231.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -19,9 +19,9 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Pane fx:id="topPane" prefHeight="41.0" prefWidth="1231.0">
+            <Pane fx:id="topPane" prefHeight="40.0" prefWidth="1231.0">
                <children>
-                  <Button fx:id="log" layoutX="1060.0" layoutY="7.0" mnemonicParsing="false" onAction="#logInAndLogOut" prefHeight="39.0" text="Sign In" />
+                  <Button fx:id="log" layoutX="1002.0" layoutY="7.0" mnemonicParsing="false" onAction="#logInAndLogOut" text="Register / Sign In" />
                </children>
                <padding>
                   <Insets bottom="10.0" top="10.0" />
@@ -59,19 +59,15 @@
          </content>
       </ScrollPane>
       <TextField fx:id="searchKeyWord" layoutX="888.0" layoutY="81.0" prefHeight="39.0" prefWidth="298.0" promptText="Search by keyword" />
-      <GridPane layoutX="-5.0" layoutY="712.0" prefHeight="52.0" prefWidth="1221.0">
+      <GridPane fx:id="gridPaneFooter" layoutY="717.0" prefHeight="40.0" prefWidth="1221.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" halignment="CENTER" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Pane fx:id="footer" prefHeight="74.0" prefWidth="1221.0" style="-: red;">
-               <children>
-                  <Label fx:id="copyRight" layoutX="411.0" layoutY="17.0" text="copyright" />
-               </children>
-            </Pane>
+            <Label fx:id="copyRight" text="copyright" GridPane.halignment="CENTER" />
          </children>
       </GridPane>
    </children>
