--- a/src/style/Employee.css
+++ b/src/style/Employee.css
@@ -18,15 +18,14 @@
 
 .table-view .column-header .label{
     -fx-text-fill: #FFF;
-    -fx-font-family: Arial;
-    -fx-font-size: 20px;
+    -fx-font-family: -fx-primafyfamily;
+    -fx-font-size: 18px;
     -fx-padding: 5 0 5 0;
 }
 
 .table-view .table-row-cell {
     -fx-background-color: transparent;
     -fx-border-width: 1 0 1 0;
-    /*-fx-border-color: #ff4d4d;*/
 }
 
 .table-view .table-row-cell:odd{
@@ -36,8 +35,8 @@
 }
 
 .table-view .table-row-cell .text{
-    -fx-font-size: 17px;
-    -fx-font-family: "Times New Roman";
+    -fx-font-size: 16px;
+    -fx-font-family: -fx-primafyfamily;
 }
 
 .table-view .table-row-cell:selected .text{
@@ -109,7 +108,7 @@
 
 .menu-bar .menu .menu-item .button, #popUp .button {
     -fx-font-size: 16px;
-    -fx-font-family: "Times New Roman";
+    -fx-font-family: -fx-primafyfamily;
     -fx-text-fill: -fx-primarytext;
     -fx-border-width: 0;
     -fx-background-color: transparent;
@@ -138,7 +137,7 @@
 #topPane #logout {
     -fx-font-size: 18px;
     -fx-text-fill: #FFF;
-    -fx-font-family: "Times New Roman";
+    -fx-font-family: -fx-primafyfamily;
     -fx-background-color: transparent;
     -fx-border-width: 0;
 }
@@ -154,18 +153,17 @@
 
 /*All label with an id#*/
 #searchP {
-    -fx-font-family: "Times New Roman";
+    -fx-font-family: -fx-primafyfamily;
     -fx-font-size: 16px;
     -fx-border-width: 0 1 1 1;
     -fx-border-style: dashed;
     -fx-background-color: transparent;
 }
 
-#footer {
+#gridPaneFooter {
     -fx-background-color: -fx-primarybc;
 }
 
-#footer .label{
+#gridPaneFooter .label{
     -fx-font-family: -fx-primafyfamily;
-
 }
