--- a/src/fxml/MainIndex.fxml
+++ b/src/fxml/MainIndex.fxml
@@ -9,24 +9,15 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="751.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Main">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="745.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Main">
    <children>
-      <GridPane layoutX="-10.0" prefHeight="40.0" prefWidth="1231.0">
+      <GridPane fx:id="gridPane1" layoutX="-10.0" prefHeight="40.0" prefWidth="1015.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
-         <children>
-            <Pane fx:id="topPane" prefHeight="40.0" prefWidth="1231.0">
-               <children>
-                  <Button fx:id="log" layoutX="1002.0" layoutY="7.0" mnemonicParsing="false" onAction="#logInAndLogOut" text="Register / Sign In" />
-               </children>
-               <padding>
-                  <Insets bottom="10.0" top="10.0" />
-               </padding></Pane>
-         </children>
       </GridPane>
       <Pane fx:id="leftPane" layoutX="14.0" layoutY="65.0" prefHeight="641.0" prefWidth="340.0">
          <children>
@@ -61,13 +52,29 @@
       <TextField fx:id="searchKeyWord" layoutX="888.0" layoutY="81.0" prefHeight="39.0" prefWidth="298.0" promptText="Search by keyword" />
       <GridPane fx:id="gridPaneFooter" layoutY="717.0" prefHeight="40.0" prefWidth="1221.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" halignment="CENTER" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label fx:id="copyRight" text="copyright" GridPane.halignment="CENTER" />
+         </children>
+      </GridPane>
+      <GridPane fx:id="gridPaneTopRight" layoutX="991.0" layoutY="-12.0" prefHeight="104.0" prefWidth="225.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <Pane fx:id="topPane" prefHeight="153.0" prefWidth="412.0">
+               <children>
+                  <Button fx:id="log" alignment="TOP_CENTER" layoutX="17.0" layoutY="14.0" mnemonicParsing="false" onAction="#logInAndLogOut" text="Register / Sign In" />
+                  <Button fx:id="signOut" layoutX="17.0" layoutY="52.0" mnemonicParsing="false" text="Sign Out" />
+               </children>
+            </Pane>
          </children>
       </GridPane>
    </children>
