--- a/src/fxml/Register.fxml
+++ b/src/fxml/Register.fxml
@@ -5,21 +5,21 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="470.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Register">
+<AnchorPane fx:id="root" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Register">
    <children>
       <Label fx:id="title" layoutX="247.0" layoutY="20.0" text="User Registration" />
-      <TextField fx:id="firstName" layoutX="80.0" layoutY="97.0" promptText="Enter first name" />
-      <TextField fx:id="lastName" layoutX="315.0" layoutY="97.0" promptText="Enter last name" />
-      <TextField fx:id="address" layoutX="80.0" layoutY="141.0" prefHeight="27.0" prefWidth="401.0" promptText="Street address" />
-      <TextField fx:id="city" layoutX="80.0" layoutY="188.0" promptText="City" />
-      <TextField fx:id="state" layoutX="315.0" layoutY="188.0" promptText="State" />
-      <Label fx:id="createMessage" layoutX="79.0" layoutY="284.0" text="Create A Login Username And Password" />
-      <TextField fx:id="userName" layoutX="80.0" layoutY="324.0" promptText="Enter username" />
-      <TextField fx:id="password" layoutX="80.0" layoutY="370.0" promptText="Enter password" />
-      <TextField fx:id="confirmPassword" layoutX="312.0" layoutY="370.0" promptText="Confirm password" />
-      <Button fx:id="clearFields" layoutX="216.0" layoutY="421.0" mnemonicParsing="false" text="Clear All Field" />
-      <Button fx:id="register" layoutX="351.0" layoutY="421.0" mnemonicParsing="false" text="Submit Registration" />
+      <TextField fx:id="firstName" layoutX="73.0" layoutY="93.0" promptText="Enter first name" />
+      <TextField fx:id="lastName" layoutX="308.0" layoutY="93.0" promptText="Enter last name" />
+      <TextField fx:id="address" layoutX="73.0" layoutY="137.0" prefHeight="27.0" prefWidth="401.0" promptText="Street address" />
+      <TextField fx:id="city" layoutX="73.0" layoutY="184.0" promptText="City" />
+      <TextField fx:id="state" layoutX="308.0" layoutY="184.0" promptText="State" />
+      <Label fx:id="createMessage" layoutX="73.0" layoutY="295.0" text="Create A Login Username And Password" />
+      <TextField fx:id="userName" layoutX="80.0" layoutY="342.0" promptText="Enter username" />
+      <TextField fx:id="password" layoutX="80.0" layoutY="388.0" promptText="Enter password" />
+      <TextField fx:id="confirmPassword" layoutX="312.0" layoutY="388.0" promptText="Confirm password" />
+      <Button fx:id="clearFields" layoutX="224.0" layoutY="447.0" mnemonicParsing="false" text="Clear All Field" />
+      <Button fx:id="register" layoutX="359.0" layoutY="447.0" mnemonicParsing="false" text="Submit Registration" />
       <Label fx:id="fieldsRequire" layoutX="80.0" layoutY="71.0" />
-      <TextField fx:id="zipCode" layoutX="80.0" layoutY="236.0" promptText="ZipCode" />
+      <TextField fx:id="zipCode" layoutX="73.0" layoutY="232.0" promptText="ZipCode" />
    </children>
 </AnchorPane>
