Fix order table in Employee class and working on account GUI

--- a/src/fxml/EmployeeIndex.fxml
+++ b/src/fxml/EmployeeIndex.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="687.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Employee">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="687.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Employee">
    <children>
-      <GridPane fx:id="gridPaneFooter" alignment="TOP_CENTER" layoutX="-18.0" layoutY="640.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="53.0" prefWidth="1137.0">
+      <GridPane fx:id="gridPaneFooter" alignment="TOP_CENTER" layoutX="-18.0" layoutY="640.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="63.0" prefWidth="1241.0">
         <columnConstraints>
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="1000.0" />
         </columnConstraints>
@@ -19,31 +19,21 @@
             <Label fx:id="footer" alignment="CENTER_RIGHT" style="-fx-text-fill: #FFF; -fx-font-size: 16px;" text="Copyright © 2018. All right reserved. Powered by M.Keita Platform" GridPane.halignment="CENTER" />
          </children>
       </GridPane>
-      <Pane fx:id="leftPane" layoutX="5.0" layoutY="68.0" prefHeight="552.0" prefWidth="408.0" style="-fx-border-width: 0 2 2 0; -fx-border-color: red;">
+      <Pane fx:id="leftPane" layoutX="5.0" layoutY="68.0" prefHeight="552.0" prefWidth="547.0" style="-fx-border-width: 0 2 2 0; -fx-border-color: red;">
          <children>
             <Label fx:id="name" layoutX="96.0" layoutY="21.0" style="-fx-font-size: 20px; -fx-font-family: Apple Chancery, cursive; -fx-font-weight: bold;" text="M.Keita Online Store" />
-            <Label layoutX="14.0" layoutY="158.0" text="Order Places" />
-            <TableView layoutX="7.0" layoutY="211.0" prefHeight="326.0" prefWidth="373.0">
+            <Label fx:id="orderTitle" layoutX="14.0" layoutY="91.0" text="List of Order Places" />
+            <TableView fx:id="orderTableView" layoutX="7.0" layoutY="130.0" prefHeight="407.0" prefWidth="532.0">
               <columns>
-                <TableColumn prefWidth="88.0" text="Order #" />
-                <TableColumn prefWidth="179.0" text="CustName" />
-                  <TableColumn prefWidth="105.0" text="Cust Num" />
+                <TableColumn fx:id="orderID" prefWidth="88.0" text="Order ID" />
+                <TableColumn fx:id="customerID" prefWidth="179.0" text="Customer ID" />
+                  <TableColumn fx:id="itemName" prefWidth="264.0" text="Product Nmae" />
               </columns>
             </TableView>
-            <GridPane alignment="CENTER" layoutX="77.0" layoutY="68.0" prefHeight="30.0" prefWidth="255.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Label text="Label" />
-               </children>
-            </GridPane>
+            <TextField fx:id="searchOrder" layoutX="309.0" layoutY="87.0" promptText="Enter order search keyword" />
          </children>
       </Pane>
-      <TableView fx:id="productTable" layoutX="453.0" layoutY="109.0" prefHeight="488.0" prefWidth="615.0">
+      <TableView fx:id="productTable" layoutX="571.0" layoutY="104.0" prefHeight="488.0" prefWidth="615.0">
         <columns>
           <TableColumn fx:id="productID" prefWidth="150.0" resizable="false" text="Product ID" />
           <TableColumn fx:id="productName" prefWidth="252.0" resizable="false" text="Name" />
@@ -51,8 +41,8 @@
             <TableColumn fx:id="productPrice" prefWidth="92.0" resizable="false" text="Price" />
         </columns>
       </TableView>
-      <TextField fx:id="searchProduct" layoutX="813.0" layoutY="65.0" prefHeight="27.0" prefWidth="255.0" promptText="Search product by key" />
-      <Pane fx:id="topPane" layoutX="-12.0" layoutY="-8.0" prefHeight="53.0" prefWidth="902.0">
+      <TextField fx:id="searchProduct" layoutX="962.0" layoutY="62.0" promptText="Enter product search keyword" />
+      <Pane fx:id="topPane" layoutX="-12.0" layoutY="-8.0" prefHeight="53.0" prefWidth="1037.0">
          <children>
             <MenuBar layoutX="14.0" layoutY="10.0" prefHeight="39.0" prefWidth="300.0">
               <menus>
@@ -91,13 +81,14 @@
             </MenuBar>
          </children>
       </Pane>
-      <Pane fx:id="popUp" layoutX="881.0" layoutY="-13.0" prefHeight="144.0" prefWidth="236.0">
+      <Pane fx:id="popUp" layoutX="1015.0" layoutY="-13.0" prefHeight="144.0" prefWidth="209.0">
          <children>
             <Button fx:id="log" layoutX="14.0" layoutY="91.0" mnemonicParsing="false" text="Sign Out" />
             <Button fx:id="account" layoutX="14.0" layoutY="53.0" mnemonicParsing="false" text="Account Info" />
             <Label fx:id="uAccount" layoutX="13.0" layoutY="19.0" text="Account" />
          </children>
       </Pane>
+      <Label fx:id="productTitle" layoutX="571.0" layoutY="68.0" text="List of all Product" />
    </children>
    <opaqueInsets>
       <Insets />
