--- a/src/fxml/Account.fxml
+++ b/src/fxml/Account.fxml
@@ -23,7 +23,13 @@
         <tabs>
           <Tab fx:id="accountInfo" text="My Account Info">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Label layoutX="14.0" layoutY="99.0" text="First name" />
+                        <Label layoutX="278.0" layoutY="99.0" text="Last Name" />
+                        <Label layoutX="12.0" layoutY="51.0" text="Account ID" />
+                     </children>
+                  </AnchorPane>
             </content>
           </Tab>
           <Tab text="Edit My Info">
