--- a/src/fxml/Account.fxml
+++ b/src/fxml/Account.fxml
@@ -3,12 +3,10 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="679.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Account">
    <children>
-      <GridPane fx:id="gridPaneFooter" layoutX="-21.0" layoutY="633.0" prefHeight="53.0" prefWidth="1242.0" style="-fx-background-color: red;">
+      <GridPane fx:id="gridPaneFooter" layoutX="-21.0" layoutY="640.0" prefHeight="50.0" prefWidth="1242.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -19,27 +17,34 @@
             <Label fx:id="footer" text="Copyright © 2018. All right reserved. Powered by M.Keita Platform" GridPane.halignment="CENTER" />
          </children>
       </GridPane>
-      <TabPane fx:id="tabPane" prefHeight="640.0" prefWidth="1200.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane fx:id="tabPane" prefHeight="619.0" prefWidth="1219.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab fx:id="accountInfo" text="My Account Info">
+          <Tab fx:id="accountInfo" text="My Info">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+              <AnchorPane fx:id="subRoot" minHeight="0.0" minWidth="0.0" prefHeight="553.0" prefWidth="1219.0" style="-: green;">
                      <children>
-                        <Label layoutX="14.0" layoutY="99.0" text="First name" />
-                        <Label layoutX="278.0" layoutY="99.0" text="Last Name" />
-                        <Label layoutX="12.0" layoutY="51.0" text="Account ID" />
+                        <Label layoutX="35.0" layoutY="106.0" text="First name:" />
+                        <Label layoutX="357.0" layoutY="100.0" text="Last Name:" />
+                        <Label layoutX="33.0" layoutY="45.0" text="Account ID:" />
+                        <Label layoutX="35.0" layoutY="178.0" text="Address:" />
+                        <Label layoutX="35.0" layoutY="246.0" text="City:" />
+                        <Label layoutX="357.0" layoutY="246.0" text="State:" />
+                        <Label layoutX="33.0" layoutY="320.0" text="ZipCode:" />
+                        <Label fx:id="subTitle" layoutX="32.0" layoutY="407.0" prefHeight="27.0" prefWidth="455.0" text="Login Information" />
+                        <Label layoutX="32.0" layoutY="479.0" text="Username:" />
+                        <Label layoutX="357.0" layoutY="479.0" text="Password:" />
                      </children>
                   </AnchorPane>
             </content>
           </Tab>
-          <Tab text="Edit My Info">
+          <Tab fx:id="editAccount" text="Edit Account">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="178.0" prefWidth="200.0" />
             </content>
           </Tab>
-            <Tab text="Edit My Address">
+            <Tab fx:id="editAddress" text="Edit My Address">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="178.0" prefWidth="200.0" />
                </content>
             </Tab>
         </tabs>
