--- a/src/fxml/EmployeeIndex.fxml
+++ b/src/fxml/EmployeeIndex.fxml
@@ -84,7 +84,7 @@
       <Pane fx:id="popUp" layoutX="1015.0" layoutY="-13.0" prefHeight="144.0" prefWidth="209.0">
          <children>
             <Button fx:id="log" layoutX="14.0" layoutY="91.0" mnemonicParsing="false" text="Sign Out" />
-            <Button fx:id="account" layoutX="14.0" layoutY="53.0" mnemonicParsing="false" text="Account Info" />
+            <Button fx:id="account" layoutX="14.0" layoutY="53.0" mnemonicParsing="false" text="Account" />
             <Label fx:id="uAccount" layoutX="13.0" layoutY="19.0" text="Account" />
          </children>
       </Pane>
