--- a/src/fxml/Account.fxml
+++ b/src/fxml/Account.fxml
@@ -23,16 +23,19 @@
             <content>
               <AnchorPane fx:id="subRoot" minHeight="0.0" minWidth="0.0" prefHeight="553.0" prefWidth="1219.0" style="-: green;">
                      <children>
-                        <Label layoutX="35.0" layoutY="106.0" text="First name:" />
-                        <Label layoutX="357.0" layoutY="100.0" text="Last Name:" />
-                        <Label layoutX="33.0" layoutY="45.0" text="Account ID:" />
-                        <Label layoutX="35.0" layoutY="178.0" text="Address:" />
-                        <Label layoutX="35.0" layoutY="246.0" text="City:" />
-                        <Label layoutX="357.0" layoutY="246.0" text="State:" />
-                        <Label layoutX="33.0" layoutY="320.0" text="ZipCode:" />
-                        <Label fx:id="subTitle" layoutX="32.0" layoutY="407.0" prefHeight="27.0" prefWidth="455.0" text="Login Information" />
-                        <Label layoutX="32.0" layoutY="479.0" text="Username:" />
-                        <Label layoutX="357.0" layoutY="479.0" text="Password:" />
+                        <Label fx:id="fLabel" layoutX="35.0" layoutY="93.0" text="First name:" />
+                        <Label fx:id="lLabel" layoutX="357.0" layoutY="87.0" text="Last Name:" />
+                        <Label fx:id="idLabel" layoutX="33.0" layoutY="45.0" text="Account ID:" />
+                        <Label fx:id="address" layoutX="36.0" layoutY="143.0" text="Address:" />
+                        <Label fx:id="city" layoutX="36.0" layoutY="196.0" text="City:" />
+                        <Label fx:id="state" layoutX="358.0" layoutY="196.0" text="State:" />
+                        <Label fx:id="zipCode" layoutX="36.0" layoutY="249.0" text="ZipCode:" />
+                        <Label fx:id="subTitle" layoutX="32.0" layoutY="303.0" prefHeight="27.0" prefWidth="455.0" text="Login Information" />
+                        <Label fx:id="userName" layoutX="32.0" layoutY="366.0" text="Username:" />
+                        <Label fx:id="password" layoutX="357.0" layoutY="366.0" text="Password:" />
+                        <Label fx:id="accountID" layoutX="143.0" layoutY="45.0" text="1111111" />
+                        <Label fx:id="firstName" layoutX="143.0" layoutY="93.0" text="Mary" />
+                        <Label fx:id="lastName" layoutX="466.0" layoutY="87.0" text="Smith" />
                      </children>
                   </AnchorPane>
             </content>
@@ -42,7 +45,7 @@
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="178.0" prefWidth="200.0" />
             </content>
           </Tab>
-            <Tab fx:id="editAddress" text="Edit My Address">
+            <Tab fx:id="editAddress" text="Edit Address">
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="178.0" prefWidth="200.0" />
                </content>
