--- a/src/style/Account.css
+++ b/src/style/Account.css
@@ -56,11 +56,13 @@
 
 #subRoot .label{
     -fx-font-size: 16px;
-    -fx-font-family: -fx-primafyfamily;
+    -fx-font-family: "Courier New", monospace;
 }
 
-#subRoot #idLabel, #lLabel, #fLabel {
+#subRoot #idLabel, #lLabel, #fLabel, #aLabel, #cLabel,
+#sLabel, #zLabel, #uLabel, #pLabel{
     -fx-font-weight: bold;
+    -fx-font-family: "Helvetica";
 }
 
 #subRoot #subTitle {
