--- a/src/style/Account.css
+++ b/src/style/Account.css
@@ -59,8 +59,9 @@
     -fx-font-family: "Courier New", monospace;
 }
 
-#subRoot #idLabel, #lLabel, #fLabel, #aLabel, #cLabel,
-#sLabel, #zLabel, #uLabel, #pLabel{
+#subRoot #lLabel, #subRoot #fLabel, #subRoot #aLabel,
+#subRoot #cLabel, #subRoot #sLabel, #subRoot #zLabel,
+#subRoot #uLabel, #subRoot #pLabel, #subRoot #idLabel{
     -fx-font-weight: bold;
     -fx-font-family: "Helvetica";
 }
