Working on menu item, button in Employee GUI

--- a/src/fxml/EmployeeIndex.fxml
+++ b/src/fxml/EmployeeIndex.fxml
@@ -30,7 +30,7 @@
                   <TableColumn fx:id="itemName" prefWidth="264.0" text="Product Nmae" />
               </columns>
             </TableView>
-            <TextField fx:id="searchOrder" layoutX="309.0" layoutY="87.0" promptText="Enter order search keyword" />
+            <TextField fx:id="searchOrder" layoutX="189.0" layoutY="87.0" prefHeight="39.0" prefWidth="344.0" promptText="Enter order search keyword" />
          </children>
       </Pane>
       <TableView fx:id="productTable" layoutX="571.0" layoutY="104.0" prefHeight="488.0" prefWidth="615.0">
@@ -41,14 +41,48 @@
             <TableColumn fx:id="productPrice" prefWidth="92.0" resizable="false" text="Price" />
         </columns>
       </TableView>
-      <TextField fx:id="searchProduct" layoutX="962.0" layoutY="62.0" promptText="Enter product search keyword" />
+      <TextField fx:id="searchProduct" layoutX="842.0" layoutY="62.0" prefHeight="39.0" prefWidth="344.0" promptText="Enter product search keyword" />
       <Pane fx:id="topPane" layoutX="-12.0" layoutY="-8.0" prefHeight="53.0" prefWidth="1037.0">
          <children>
             <MenuBar layoutX="14.0" layoutY="10.0" prefHeight="39.0" prefWidth="300.0">
               <menus>
                 <Menu mnemonicParsing="false" text="File">
                   <items>
-                    <MenuItem mnemonicParsing="false" />
+                    <MenuItem mnemonicParsing="false">
+                           <graphic>
+                              <MenuButton mnemonicParsing="false" popupSide="RIGHT" text="Export Text File">
+                                <items>
+                                  <MenuItem mnemonicParsing="false">
+                                       <graphic>
+                                          <Button mnemonicParsing="false" text="Product" />
+                                       </graphic>
+                                    </MenuItem>
+                                  <MenuItem mnemonicParsing="false">
+                                       <graphic>
+                                          <Button mnemonicParsing="false" text="Order" />
+                                       </graphic>
+                                    </MenuItem>
+                                </items>
+                              </MenuButton>
+                           </graphic></MenuItem>
+                        <MenuItem mnemonicParsing="false">
+                           <graphic>
+                              <MenuButton mnemonicParsing="false" text="Export Excel File" popupSide="RIGHT">
+                                <items>
+                                  <MenuItem mnemonicParsing="false">
+                                       <graphic>
+                                          <Button mnemonicParsing="false" text="Product" />
+                                       </graphic>
+                                    </MenuItem>
+                                  <MenuItem mnemonicParsing="false">
+                                       <graphic>
+                                          <Button mnemonicParsing="false" text="Order" />
+                                       </graphic>
+                                    </MenuItem>
+                                </items>
+                              </MenuButton>
+                           </graphic>
+                        </MenuItem>
                   </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
@@ -59,21 +93,21 @@
                            </graphic></MenuItem>
                   </items>
                 </Menu>
-                <Menu mnemonicParsing="false" text="Account">
+                <Menu mnemonicParsing="false" text="Product">
                   <items>
                         <MenuItem mnemonicParsing="false">
                            <graphic>
-                              <Button mnemonicParsing="false" text="Account Info" />
+                              <Button mnemonicParsing="false" text="Search Product" />
                            </graphic>
                         </MenuItem>
                         <MenuItem mnemonicParsing="false">
                            <graphic>
-                              <Button mnemonicParsing="false" text="Customer Info" />
+                              <Button mnemonicParsing="false" text="Add New Product" />
                            </graphic>
                         </MenuItem>
                     <MenuItem mnemonicParsing="false">
                            <graphic>
-                              <Button mnemonicParsing="false" text="Employee" />
+                              <Button mnemonicParsing="false" text="Edit Product" />
                            </graphic></MenuItem>
                   </items>
                 </Menu>
