Working on menu item, button in Employee GUI

--- a/src/fxml/EmployeeIndex.fxml
+++ b/src/fxml/EmployeeIndex.fxml
@@ -67,7 +67,7 @@
                            </graphic></MenuItem>
                         <MenuItem mnemonicParsing="false">
                            <graphic>
-                              <MenuButton mnemonicParsing="false" text="Export Excel File" popupSide="RIGHT">
+                              <MenuButton mnemonicParsing="false" popupSide="RIGHT" text="Export Excel File">
                                 <items>
                                   <MenuItem mnemonicParsing="false">
                                        <graphic>
